--- a/nodejs-helloworld/package.json
+++ b/nodejs-helloworld/package.json
@@ -5,6 +5,6 @@
   "author": "Red Hat Training",
   "license": "ASL",
   "dependencies": {
-    "express": "4.14.x"
+    "express": "~4.14.x"
   }
 }
